--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "default_hs_url": "https://matrix.org",
     "default_is_url": "https://vector.im",
-    "brand": "Riot",
-    "integrations_ui_url": "https://scalar.vector.im",
-    "integrations_rest_url": "https://scalar.vector.im/api ",
+    "brand": "#GoWebMasters chat",
+    "integrations_ui_url": "https://scalar.vector.im/",
+    "integrations_rest_url": "https://scalar.vector.im/api",
     "enableLabs": true,
     "roomDirectory": {
         "servers": [
@@ -31,6 +31,8 @@
                 "nativePattern": "[^\\s]+/[^\\s]+$"
             },
             "irc:freenode": {
+                "protocol": "irc",
+                "domain": "ipv6.chat.freenode.net",
                 "portalRoomPattern": "#freenode_.*:matrix.org",
                 "name": "Freenode",
                 "icon": "//matrix.org/_matrix/media/v1/download/matrix.org/DHLHpDDgWNNejFmrewvwEAHX",
@@ -38,6 +40,8 @@
                 "nativePattern": "^#[^\\s]+$"
             },
             "irc:mozilla": {
+                "protocol": "irc",
+                "domain": "irc.mozilla.org",
                 "portalRoomPattern": "#mozilla_.*:matrix.org",
                 "name": "Mozilla",
                 "icon": "//matrix.org/_matrix/media/v1/download/matrix.org/DHLHpDDgWNNejFmrewvwEAHX",
