--- a/config.json
+++ b/config.json
@@ -18,7 +18,12 @@
         },
         "networks": {
             "_matrix": {
+                "protocol": "_matrix",
                 "portalRoomPattern": "#gowebmasters-.*:matrix.org",
+                "name": "Matrix",
+                "icon": "//gitter.im/favicon.ico",
+                "example": "#example:matrix.org",
+                "nativePattern": "^#[^\\s]+:[^\\s]"
             },
             "gitter": {
                 "protocol": "gitter",
